fixed main page background color; fixed main page horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Collapse or no? If no, change all font-sizes back to 2.5vh/relative amount */
 .Main {
   background-color: var(--main-bg-color);
+  overflow-x: hidden;
 }
 
 .NavBar {
